Duplicate option value handling
Duplicate values of the options -iflows and -skip-iflows no longer
cause an IllegalArgumentException at runtime. Now duplicate values are
simply ignored.